styled header and buttons added to header

--- a/Synctify-FE/src/Styles/Header.css
+++ b/Synctify-FE/src/Styles/Header.css
@@ -1,22 +1,28 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
-*{
-    margin:0;
-    padding:0;
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
 }
 body{
- height: 100vh;
+
  overflow: hidden;
+ min-height: 100vh;
+ display: flex;
+ flex-direction: column;
+
 }
 .left-bar{
+ 
     padding:40px 50px;
-    width:200px;
+    width:300px;
     height:100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
     box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
-    border-right: 1px solid #e0e0e0;
-    background-color:#1c1c1e;
+    border-right: 1px solid #0D160B;
+    background-color:#0A0908;
 }
 
 
@@ -53,15 +59,59 @@ body{
     
 }
 
+.input-container{
+    position: relative;
+  display: flex;
+  align-items: center;
+  width: 100%;
+}
+
+.input-icon{
+    position: absolute;
+    top:10px;
+    left: 5px; /* Position icon inside the input */
+    color: #999; /* Icon color */
+    font-size: 16px; 
+}
+.Search-bar{
+
+    margin-bottom: 30px;
+    padding:10px 30px;
+     background-color: #333333;
+    color: #FFFFFF;
+    border: none;
+    border-radius: 4px;
+   outline:none;
+    transition: background-color 0.3s, box-shadow 0.3s;
+    
+   
+}
+
+.Search-bar:focus{
+    background-color: #3a3a44;
+    box-shadow: 0 0 5px rgba(255, 255, 255, 0.2);
+}
 .left-nav li{
     font-size:18px;
     color:#FFFFFFEB;
     cursor: pointer;
     transition: color 0.3s;
+    display: flex;
+    gap:10px;
+    align-items: center;
+    font-size: 20px;
 }
 
 
 .left-nav li:hover{
     /*Change hover colour after*/
-    color:grey
+    color:#6c757d
+}
+
+.left-footer {
+    font-size: 15px;
+    color: white;
+    text-align: center;
+    margin-top:auto;
+    margin-right:35px;
 }
