added styling for new font

--- a/Synctify-FE/src/Styles/Header.css
+++ b/Synctify-FE/src/Styles/Header.css
@@ -1,4 +1,6 @@
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto+Condensed:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 * {
     margin: 0;
     padding: 0;
@@ -22,7 +24,8 @@ body{
     align-items: center;
     box-shadow: 2px 0 5px rgba(0, 0, 0, 0.1);
     border-right: 1px solid #0D160B;
-    background-color:#0A0908;
+    background-color:#1A1A1A;
+    /*#0A0908*/
 }
 
 
@@ -36,10 +39,11 @@ body{
 }
 
 .synctify-logo {
-    font-family: 'Playfair Display', serif;
-    font-size: 30px; 
-    color:#FFFFFFEB;
-    text-align: center;
+    font-family: "Roboto", serif;
+  font-weight: 300;
+  font-style: normal;
+  color:white;
+  font-size: 28px;
   
 }
 
